charts/istio/authz/authorization-internal.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: come2us-internal-access
  namespace: come2us
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["come2us"]
      to:
        - operation:
            paths:
              - /internal/{**}
